create menu calling options from a general environment - create menu using mateiral from custome schematics

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,16 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+menu {
+    padding: 0;
+    margin: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 999999;
+}
+
+.container {
+    position: relative;
+    top: 70px;
+}
