add set date to humanDateFormat using moment as a pipe

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,21 @@ menu {
     position: relative;
     top: 70px;
 }
+
+a {
+    cursor: pointer !important;
+}
+
+table {
+    width: 100%;
+}
+
+.mat-form-field {
+    font-size: 14px;
+    width: 100%;
+}
+
+td,
+th {
+    width: 25%;
+}
