--- a/src/app/_components/public/personajes/personajes.component.html
+++ b/src/app/_components/public/personajes/personajes.component.html
@@ -38,12 +38,12 @@
 
                 <ng-container matColumnDef="created">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Created </th>
-                    <td mat-cell *matCellDef="let row"> {{row.created}} </td>
+                    <td mat-cell *matCellDef="let row"> {{row.created | moment:1}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="edited">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Edited </th>
-                    <td mat-cell *matCellDef="let row"> {{row.edited}} </td>
+                    <td mat-cell *matCellDef="let row"> {{row.edited | moment:1}} </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
